--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
     </head>
     
     <body>
-        <header></header>
-        <section></section>
-        <footer></footer>
+		<script type="text/template" id="homeTemplate">
+			<header><%= cHeaderTitle %></header>
+	        <section>HOME</section>
+	        <footer></footer>
+		</script>
         <script src='js/jquery-1.8.0.min.js'></script>
         <script src='js/underscore-1.3.3.min.js'></script>
         <script src='js/backbone-1.0.0.min.js'></script>
