--- a/index.html
+++ b/index.html
@@ -4,45 +4,25 @@
         <meta charset='UTF-8'>
         <title>ANR-TO</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
+		<base href="/ANR-TO/">
         <link rel='stylesheet' href='css/default.css' />
         <script src='js/modernizr.custom.92278.js'></script>
         <script>
-            // Give Modernizr.load a string, an object, or an array of strings and objects
             Modernizr.load();
-            /*
-            Modernizr.load([
-                // Presentational polyfills
-                {
-                    // Logical list of things we would normally need
-                    test : Modernizr.fontface && Modernizr.canvas && Modernizr.cssgradients,
-                    // Modernizr.load loads css and javascript by default
-                    nope : ['presentational-polyfill.js', 'presentational.css']
-                },
-                // Functional polyfills
-                {
-                    // This just has to be truthy
-                    test : Modernizr.websockets && window.JSON,
-                    // socket-io.js and json2.js
-                    nope : 'functional-polyfills.js',
-                    // You can also give arrays of resources to load.
-                    both : [ 'app.js', 'extra.js' ],
-                    complete : function () {
-                        // Run this after everything in this group has downloaded
-                        // and executed, as well everything in all previous groups
-                        myApp.init();
-                    }
-                },
-                // Run your analytics after you've already kicked off all the rest
-                // of your app.
-                'post-analytics.js'
-            ]);*/
         </script>
     </head>
     
     <body>
 		<script type="text/template" id="homeTemplate">
 			<header><%= cHeaderTitle %></header>
-	        <section>HOME</section>
+	        <section>
+				<h1>HOME</h1>
+				<ul>
+					<li><a href="current">Current T.</a></li>
+					<li><a href="new">New T.</a></li>
+					<li><a href="tournaments">View all T.</a></li>
+				</ul>
+			</section>
 	        <footer></footer>
 		</script>
         <script src='js/jquery-1.8.0.min.js'></script>
