--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
         <meta charset='UTF-8'>
         <title>ANR-TO</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-		<base href="/ANR-TO/">
+		<base href="C:/xampp/htdocs/ANR-TO/">
         <link rel='stylesheet' href='css/default.css' />
         <script src='js/modernizr.custom.92278.js'></script>
         <script>
