--- a/index.html
+++ b/index.html
@@ -4,9 +4,8 @@
         <meta charset='UTF-8'>
         <title>ANR-TO</title>
         <meta name='viewport' content='width=device-width, initial-scale=1'>
-		<base href="C:/xampp/htdocs/ANR-TO/">
-        <link rel='stylesheet' href='css/default.css' />
-        <script src='js/modernizr.custom.92278.js'></script>
+        <link rel='stylesheet' href='/css/default.css' />
+        <script src='/js/modernizr.custom.92278.js'></script>
         <script>
             Modernizr.load();
         </script>
@@ -21,13 +20,49 @@
 					<li><a href="current">Current T.</a></li>
 					<li><a href="new">New T.</a></li>
 					<li><a href="tournaments">View all T.</a></li>
+					<li><a href="players">Players</a></li>
+					<li><a href="new-player">New player</a></li>
 				</ul>
 			</section>
 	        <footer></footer>
 		</script>
-        <script src='js/jquery-1.8.0.min.js'></script>
-        <script src='js/underscore-1.3.3.min.js'></script>
-        <script src='js/backbone-1.0.0.min.js'></script>
-        <script src='js/anr-to.js'></script>
+        <script type="text/template" id="newPlayerTemplate">
+			<header><%= cHeaderTitle %></header>
+	        <section>
+				<h1><a href="/">HOME</a> / New Player</h1>
+				<form id="newPlayerForm">
+                    <label>Name: <input type="text" id="newPlayerName" /></label>
+                    <input type="submit" value="save" />
+                </form>
+			</section>
+	        <footer></footer>
+		</script>
+        <script type="text/template" id="playersTemplate">
+			<header><%= cHeaderTitle %></header>
+	        <section>
+				<h1><a href="/">HOME</a> / Players</h1>
+				<dl>
+                    <dt>Name</dt>
+                    <dd>Points</dd>
+                    <dd>Runner Wins</dd>
+                    <dd>Runner Agendas</dd>
+                    <dd>Corp Wins</dd>
+                    <dd>Corp Agendas</dd>
+                    <% for (var i = 0; i < aPlayers.length; i++) { %>
+                    <dt><%=aPlayers[i].name %></dt>
+                    <dd><%=aPlayers[i].points %></dd>
+                    <dd><%=aPlayers[i].runnerWins %></dd>
+                    <dd><%=aPlayers[i].runnerAgendaPoints %></dd>
+                    <dd><%=aPlayers[i].corpWins %></dd>
+                    <dd><%=aPlayers[i].corpAgendaPoints %></dd>
+                    <% } %>
+                </dl>
+			</section>
+	        <footer></footer>
+		</script>
+        <script src='/js/jquery-1.8.0.min.js'></script>
+        <script src='/js/underscore-1.3.3.min.js'></script>
+        <script src='/js/backbone-1.0.0.min.js'></script>
+        <script src='/js/anr-to.js'></script>
     </body>
 </html>
