--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset='UTF-8'>
-        <title>ANR-TO</title>
+        <title>THE.TOOLBOX</title>
         <meta name='viewport' content='width=device-width,initial-scale=1,maximum-scale=1,user-scalable=no'>
         <meta name="apple-mobile-web-app-capable" content="yes">
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
