Added Application Cache support

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="manifest.appcache">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
         <meta charset='UTF-8'>
@@ -9,6 +9,9 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel='stylesheet' href='/css/cssflow.css' />
         <link rel='stylesheet' href='/css/default.css' />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/h/apple-touch-icon.png">
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/m/apple-touch-icon.png">
+		<link rel="apple-touch-icon-precomposed" href="img/l/apple-touch-icon.png">
         <script src='/js/modernizr.custom.92278.js'></script>
         <script>
             Modernizr.load();
@@ -161,6 +164,19 @@
         <script src='/js/jquery-1.8.0.min.js'></script>
         <script src='/js/underscore-1.3.3.min.js'></script>
         <script src='/js/backbone-1.0.0.min.js'></script>
-        <script src='/js/anr-to.js'></script>
+        <script src='/js/the.toolbox.js'></script>
+        <script>
+            (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
+            (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
+            m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
+            })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
+            
+            window.addEventListener('load', function () {
+                if (navigator.onLine) {
+                    ga('create', 'UA-43388099-1', 'thetoolbox.mobi');
+                    ga('send', 'pageview');
+                }
+            }, true);
+        </script>
     </body>
 </html>
