--- a/index.html
+++ b/index.html
@@ -9,9 +9,11 @@
         <meta name="apple-mobile-web-app-status-bar-style" content="black">
         <link rel='stylesheet' href='/css/cssflow.css' />
         <link rel='stylesheet' href='/css/default.css' />
-		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/h/apple-touch-icon.png">
-		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/m/apple-touch-icon.png">
-		<link rel="apple-touch-icon-precomposed" href="img/l/apple-touch-icon.png">
+        <link rel="shortcut icon" href="img/favicon.ico" />
+		<link rel="apple-touch-icon-precomposed" href="img/apple-touch-icon-iphone.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="72x72" href="img/apple-touch-icon-ipad.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="114x114" href="img/apple-touch-icon-iphone4.png" />
+		<link rel="apple-touch-icon-precomposed" sizes="144x144" href="img/apple-touch-icon-iphone3.png" />
         <script src='/js/modernizr.custom.92278.js'></script>
         <script>
             Modernizr.load();
