ScrollTo 0 and minor fixes

--- a/index.html
+++ b/index.html
@@ -178,6 +178,10 @@
                     ga('create', 'UA-43388099-1', 'thetoolbox.mobi');
                     ga('send', 'pageview');
                 }
+                
+                window.setTimeout(function () {
+                    window.scrollTo(0, 1);
+                }, 1000);
             }, true);
         </script>
     </body>
