--- a/index.html
+++ b/index.html
@@ -166,6 +166,7 @@
         <script src='/js/jquery-1.8.0.min.js'></script>
         <script src='/js/underscore-1.3.3.min.js'></script>
         <script src='/js/backbone-1.0.0.min.js'></script>
+        <script src='/js/IndexedDBShim.min.js'></script>
         <script src='/js/the.toolbox.js'></script>
         <script>
             (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
